@@ -1,3 +1,8 @@
+Wed, 14 June 2006 Daniel R. Fisher
+1.  In QMCDansWalkerInitialization, improved the way electrons are
+    redistributed if any nuclei are charged after the electrons are
+    assigned.
+
 Wed, 7 June 2006 Amos Anderson
 1.	Made it easier to add new future walking properties to measure.
 2.	Fixed a QMCNuclearForces problem relating to compiling in float.
